[workspace]
resolver  = "2"
members = [ "crates/*" ]

[workspace.package]
edition = "2024"
version = "0.1.4"
repository = "https://github.com/crutcher/rs-cinic-10"
license = "MIT"


[workspace.dependencies]
burn = { version = "^0.17.0" }
serde = { version = "^1.0", features = ["derive"] }

image = { version = "^0.25.6" }

strum = "^0.27.1"
strum_macros = "^0.27.1"

csv = { version = "^1.3.1"  }

indoc = { version = "^2.0.6"}
anyhow = { version = "^1.0.98" }

