[package]
name = "rs-cinic-10-burn"
keywords = ["burn", "tensor"]
categories = ["computer-vision"]
description = "Burn bindings for rs-cinic-10"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rs-cinic-10-index = { version = "0.1.9", path = "../rs-cinic-10-index" }
burn = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }

