[package]
name = "rs-cinic-10-index"
keywords = ["data"]
categories = ["computer-vision"]
description = "Fluent Contracts for the Burn library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
strum = {  workspace = true }
strum_macros = {  workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
