[package]
name = "rs-cinic-10-index"
keywords = ["data"]
categories = ["computer-vision"]
description = "Data index for CINIC-10 dataset"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
strum = {  workspace = true }
strum_macros = {  workspace = true }
anyhow = { workspace = true }
enum-ordinalize = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
